add https to stylesheet links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>D3 Barchart</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style>
 
 	.axis {
@@ -37,13 +37,13 @@
 				<h1 class="text-center">U.S. GDP Barchart</h1>
 				<div id="chart"></div>
 				<p id="description"></p>
-				<p>Github repository found at : <a href="https://github.com/ncabelin/d3-gdp-barchart.git">https://github.com/ncabelin/d3-gdp-barchart.git</a></p>
+				<p><strong>Github repository found at : </strong><a href="https://github.com/ncabelin/d3-gdp-barchart.git">https://github.com/ncabelin/d3-gdp-barchart.git</a></p>
 			</div>
 		</div>
 	</div>
 <!-- <script src="GDP-data.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
 <script>
 $(document).ready(function() {
